Implement basic projections, tests